--- a/HealthKitDataSeeds/Base.lproj/Main.storyboard
+++ b/HealthKitDataSeeds/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -16,50 +16,106 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8vc-Uu-LxU">
-                                <rect key="frame" x="110.5" y="427" width="193" height="42"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                                <state key="normal" title="Initialize HealthKit"/>
+                                <rect key="frame" x="80" y="79" width="254" height="45"/>
+                                <color key="backgroundColor" red="0.7917406573257133" green="0.084571485003426705" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="nR3-1M-mll"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                <state key="normal" title="Add data to HealthKit">
+                                    <color key="titleColor" systemColor="systemGroupedBackgroundColor" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <color key="titleShadowColor" red="1" green="0.0" blue="0.88923918059999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="20"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                                 <connections>
                                     <action selector="startSeedingData:" destination="BYZ-38-t0r" eventType="touchUpInside" id="27x-PK-WUf"/>
                                 </connections>
                             </button>
-                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eUf-bP-gdi">
-                                <rect key="frame" x="143" y="487" width="129" height="30"/>
-                                <state key="normal" title="Plant quantity data"/>
-                                <connections>
-                                    <action selector="seedQuantityData:" destination="BYZ-38-t0r" eventType="touchUpInside" id="jNh-bQ-3JF"/>
-                                    <action selector="startSeedingData:" destination="BYZ-38-t0r" eventType="touchUpInside" id="emD-kA-jGL"/>
-                                </connections>
-                            </button>
-                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gs8-ge-is9">
-                                <rect key="frame" x="143" y="525" width="128" height="30"/>
-                                <state key="normal" title="Plant workout data"/>
-                                <connections>
-                                    <action selector="startSeedingData:" destination="BYZ-38-t0r" eventType="touchUpInside" id="1Qh-mt-l7e"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qyW-IR-Mt5">
-                                <rect key="frame" x="159" y="589" width="97" height="30"/>
-                                <state key="normal" title="SAVE VALUES"/>
-                                <connections>
-                                    <action selector="saveValues:" destination="BYZ-38-t0r" eventType="touchUpInside" id="o9a-KY-Hhc"/>
-                                    <action selector="startSeedingData:" destination="BYZ-38-t0r" eventType="touchUpInside" id="MBm-X3-Jep"/>
-                                </connections>
-                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Quantity of samples uploaded:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dCY-rT-7II">
+                                <rect key="frame" x="20" y="254" width="244" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KCt-Xc-Nah">
+                                <rect key="frame" x="269" y="254" width="11" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                                <color key="textColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="URL" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Px5-kl-IAo">
+                                <rect key="frame" x="251.5" y="159.5" width="33" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="kLT-ma-okQ">
+                                <rect key="frame" x="0.0" y="289.5" width="414" height="552.5"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="HKTypeCell" id="Qqf-Y9-tlE">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Qqf-Y9-tlE" id="qdr-I4-4dx">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="PfH-BA-W5u">
+                                <rect key="frame" x="182.5" y="154" width="51" height="31"/>
+                                <color key="onTintColor" red="1" green="0.0" blue="0.88923918058966134" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </switch>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Local File" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v6M-Db-ICJ">
+                                <rect key="frame" x="89.5" y="159.5" width="73" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Place URL" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1Ct-6g-BBv">
+                                <rect key="frame" x="30" y="205" width="354" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="URL" returnKeyType="done" textContentType="url"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="8vc-Uu-LxU" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="6Vq-cd-bDA"/>
-                            <constraint firstItem="eUf-bP-gdi" firstAttribute="leading" secondItem="8vc-Uu-LxU" secondAttribute="leading" id="Bv9-Vv-4eq"/>
-                            <constraint firstItem="eUf-bP-gdi" firstAttribute="top" secondItem="8vc-Uu-LxU" secondAttribute="bottom" constant="15" id="Ecf-mO-fdM"/>
-                            <constraint firstItem="Gs8-ge-is9" firstAttribute="leading" secondItem="eUf-bP-gdi" secondAttribute="leading" constant="-1.5" id="YLX-kS-afQ"/>
-                            <constraint firstItem="qyW-IR-Mt5" firstAttribute="top" secondItem="Gs8-ge-is9" secondAttribute="bottom" constant="34" id="gt7-67-PZB"/>
-                            <constraint firstItem="8vc-Uu-LxU" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="ntH-Rx-yYV"/>
-                            <constraint firstItem="qyW-IR-Mt5" firstAttribute="centerX" secondItem="Gs8-ge-is9" secondAttribute="centerX" id="yd0-cv-o4U"/>
-                            <constraint firstItem="Gs8-ge-is9" firstAttribute="top" secondItem="eUf-bP-gdi" secondAttribute="bottom" constant="17" id="zuS-IW-omM"/>
+                            <constraint firstItem="8vc-Uu-LxU" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="2Kd-KC-FEL"/>
+                            <constraint firstItem="8vc-Uu-LxU" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="35" id="3yT-g3-kA0"/>
+                            <constraint firstItem="1Ct-6g-BBv" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="6F4-pG-X38"/>
+                            <constraint firstItem="1Ct-6g-BBv" firstAttribute="top" secondItem="PfH-BA-W5u" secondAttribute="bottom" constant="20" id="83F-NR-rYQ"/>
+                            <constraint firstItem="kLT-ma-okQ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="8Da-SW-Tz9"/>
+                            <constraint firstItem="KCt-Xc-Nah" firstAttribute="centerY" secondItem="dCY-rT-7II" secondAttribute="centerY" id="CXd-sm-4g2"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="kLT-ma-okQ" secondAttribute="bottom" constant="20" id="Ds3-q1-kuT"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="1Ct-6g-BBv" secondAttribute="trailing" constant="30" id="KGY-T8-bxD"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="kLT-ma-okQ" secondAttribute="trailing" id="LNu-RX-vE6"/>
+                            <constraint firstItem="KCt-Xc-Nah" firstAttribute="leading" secondItem="dCY-rT-7II" secondAttribute="trailing" constant="5" id="OJP-wi-PqT"/>
+                            <constraint firstItem="v6M-Db-ICJ" firstAttribute="centerY" secondItem="PfH-BA-W5u" secondAttribute="centerY" id="PmO-cU-Rfn"/>
+                            <constraint firstItem="dCY-rT-7II" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="UOy-VQ-bWm"/>
+                            <constraint firstItem="kLT-ma-okQ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="XUe-Tf-FvA"/>
+                            <constraint firstItem="8vc-Uu-LxU" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="80" id="a5y-Ig-825"/>
+                            <constraint firstItem="Px5-kl-IAo" firstAttribute="centerY" secondItem="PfH-BA-W5u" secondAttribute="centerY" id="hXD-0P-E8Y"/>
+                            <constraint firstItem="Px5-kl-IAo" firstAttribute="leading" secondItem="PfH-BA-W5u" secondAttribute="trailing" constant="20" id="iI7-wH-u3Q"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="8vc-Uu-LxU" secondAttribute="trailing" constant="80" id="lGk-3S-sgV"/>
+                            <constraint firstItem="kLT-ma-okQ" firstAttribute="top" secondItem="dCY-rT-7II" secondAttribute="bottom" constant="15" id="nkU-YP-jtb"/>
+                            <constraint firstItem="PfH-BA-W5u" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="okf-Fo-AG4"/>
+                            <constraint firstItem="PfH-BA-W5u" firstAttribute="leading" secondItem="v6M-Db-ICJ" secondAttribute="trailing" constant="20" id="pjF-pB-52c"/>
+                            <constraint firstItem="PfH-BA-W5u" firstAttribute="top" secondItem="8vc-Uu-LxU" secondAttribute="bottom" constant="30" id="sLv-b7-Guk"/>
+                            <constraint firstItem="KCt-Xc-Nah" firstAttribute="top" secondItem="1Ct-6g-BBv" secondAttribute="bottom" constant="15" id="sr9-Tm-LE0"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="fileSelectorSwitch" destination="PfH-BA-W5u" id="EsB-vh-Z09"/>
+                        <outlet property="numberOfSamplesLabel" destination="KCt-Xc-Nah" id="I1U-UG-Sgn"/>
+                        <outlet property="typesTableView" destination="kLT-ma-okQ" id="T4d-OE-xbe"/>
+                        <outlet property="urlTextField" destination="1Ct-6g-BBv" id="kMa-Rj-eVe"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
